# x11-mandelbrot

./: CMakeLists.txt  LICENSE.md  README.md  main.c
.github/workflows/: cmake.yml
